# cmajor-compiler

./: .gitignore  readme.md
compiler/: Cargo.toml  compiler.cabal  compiler2.cabal  package.yaml  stack.yaml  test.cmajor
compiler/src/: Lib.hs  ast.rs  interpreter.rs  jit.rs  main.rs  parser.rs
compiler/src/vm/: bytecode.rs  opcode.rs  vm.rs
